refactor (#45): substitui collect(Collectors.toList()) para toList() para melhoria na legibilidade.